--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">My TodoList App</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">CAW ToDoList App</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -41,7 +41,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - A .NET Core SimpleApplication</p>
+            <p>&copy; 2018 - A .NET Core CAW ToDoList App</p>
         </footer>
     </div>
 
